external/grok/src/lib/jp2/grok.h

typedef enum GRK_SUPPORTED_FILE_FMT
{
	GRK_UNK_FMT,
	GRK_J2K_FMT,
	GRK_JP2_FMT,
	GRK_PXM_FMT,
	GRK_PGX_FMT,
	GRK_PAM_FMT,
	GRK_BMP_FMT,
	GRK_TIF_FMT,
	GRK_RAW_FMT, /* MSB / Big Endian */
	GRK_PNG_FMT,
	GRK_RAWL_FMT, /* LSB / Little Endian */
	GRK_JPG_FMT
} GRK_SUPPORTED_FILE_FMT;
/**
 * Supported image color spaces
 * */
typedef enum _GRK_COLOR_SPACE
{
	GRK_CLRSPC_UNKNOWN = 0, /**< unknown */
	GRK_CLRSPC_SRGB = 2, /**< sRGB */
	GRK_CLRSPC_GRAY = 3, /**< grayscale */
	GRK_CLRSPC_SYCC = 4, /**< standard YCC (YUV) */
	GRK_CLRSPC_EYCC = 5, /**< extended YCC */
	GRK_CLRSPC_CMYK = 6, /**< CMYK */
	GRK_CLRSPC_DEFAULT_CIE = 7, /**< default CIE LAB */
	GRK_CLRSPC_CUSTOM_CIE = 8, /**< custom CIE LAB */
	GRK_CLRSPC_ICC = 9 /**< ICC profile */
} GRK_COLOR_SPACE;
typedef enum GRK_TILE_CACHE_STRATEGY
{
	GRK_TILE_CACHE_NONE,
	GRK_TILE_CACHE_ALL,
} GRK_TILE_CACHE_STRATEGY;
/**
 *
 * Base Grok ref-counted object
 *
 */
typedef struct _grk_object
{
	void* wrapper;
} grk_object;
/**
 Channel definition: channel index, type, association
 */
typedef struct _grk_channel_description
{
	uint16_t cn;
	uint16_t typ;
	uint16_t asoc;
} grk_channel_description;
/**
 Channel definitions and number of definitions
 */
typedef struct _grk_channel_definition
{
	grk_channel_description* descriptions;
	uint16_t num_channel_descriptions;
} grk_channel_definition;
/**
 Component mappings: component index, mapping type, palette column
 */
typedef struct _grk_component_mapping_comp
{
	uint16_t component_index;
	uint8_t mapping_type;
	uint8_t palette_column;
} grk_component_mapping_comp;
/**
 Palette data
 */
typedef struct _grk_palette_data
{
	int32_t* lut;
	uint16_t num_entries;
	grk_component_mapping_comp* component_mapping;
	uint8_t num_channels;
	bool* channel_sign;
	uint8_t* channel_prec;
} grk_palette_data;
/**
 ICC profile, palette, channel definition
 */
typedef struct grk_color
{
	uint8_t* icc_profile_buf;
	uint32_t icc_profile_len;
	grk_channel_definition* channel_definition;
	grk_palette_data* palette;
	bool has_colour_specification_box;
} grk_color;
typedef struct grk_asoc
{
	uint32_t level; // 0 for root level
	const char* label;
	uint8_t* xml;
	uint32_t xml_len;
} grk_asoc;
/**
 * Header info
 */
typedef struct _grk_header_info
{
	/** initial code block width, default to 64 */
	uint32_t cblockw_init;
	/** initial code block height, default to 64 */
	uint32_t cblockh_init;
	/** 1 : use the irreversible DWT 9-7, 0 : use lossless compression (default) */
	bool irreversible;
	/** multi-component transform identifier */
	uint32_t mct;
	/** RSIZ value
	 To be used to combine GRK_PROFILE_*, GRK_EXTENSION_* and (sub)levels values. */
	uint16_t rsiz;
	/** number of resolutions */
	uint32_t numresolutions;
	// coding style can be specified in main header COD segment,
	// tile header COD segment, and tile component COC segment.
	// !!! Assume that coding style does not vary across tile components !!!
	uint8_t csty;
	// code block style is specified in main header COD segment, and can
	// be overridden in a tile header. !!! Assume that style does
	// not vary across tiles !!!
	uint8_t cblk_sty;
	/** initial precinct width */
	uint32_t prcw_init[GRK_J2K_MAXRLVLS];
	/** initial precinct height */
	uint32_t prch_init[GRK_J2K_MAXRLVLS];
	/** XTOsiz */
	uint32_t tx0;
	/** YTOsiz */
	uint32_t ty0;
	/** XTsiz */
	uint32_t t_width;
	/** YTsiz */
	uint32_t t_height;
	/** tile grid width */
	uint32_t t_grid_width;
	/** tile grid height  */
	uint32_t t_grid_height;
	/** number of layers */
	uint16_t numlayers;

	// note: xml_data will remain valid
	// until codec is destroyed
	uint8_t* xml_data;
	size_t xml_data_len;
	size_t num_comments;
	char* comment[GRK_NUM_COMMENTS_SUPPORTED];
	uint16_t comment_len[GRK_NUM_COMMENTS_SUPPORTED];
	bool isBinaryComment[GRK_NUM_COMMENTS_SUPPORTED];

	grk_asoc asocs[GRK_NUM_ASOC_BOXES_SUPPORTED];
	uint32_t num_asocs;

} grk_header_info;
/**
 * Core decompress parameters
 * */
typedef struct _grk_dparameters
{
	/**
	 Set the number of highest resolution levels to be discarded.
	 The image resolution is effectively divided by 2 to the power of the number of discarded
	 levels. The reduce factor is limited by the smallest total number of decomposition levels among
	 tiles. if greater than zero, then image is decoded to original dimension divided by
	 2^(cp_reduce); if equal to zero or not used, image is decompressed to full resolution
	 */
	uint8_t cp_reduce;
	/**
	 Set the maximum number of quality layers to decompress.
	 If there are fewer quality layers than the specified number, all quality layers will be
	 decompressed. if != 0, then only the first "layer" layers are decompressed; if == 0 or not
	 used, all the quality layers are decompressed
	 */
	uint16_t cp_layer;
	/** input file name */
	char infile[GRK_PATH_LEN];
	/** output file name */
	char outfile[GRK_PATH_LEN];
	/** input file format*/
	GRK_SUPPORTED_FILE_FMT decod_format;
	/** output file format*/
	GRK_SUPPORTED_FILE_FMT cod_format;
	/** Decompress window left boundary */
	uint32_t DA_x0;
	/** Decompress window right boundary */
	uint32_t DA_x1;
	/** Decompress window up boundary */
	uint32_t DA_y0;
	/** Decompress window bottom boundary */
	uint32_t DA_y1;
	/** Verbose mode */
	bool m_verbose;
	/** tile number of the decompressed tile*/
	uint16_t tileIndex;
	/** Number of tiles to decompress */
	uint32_t nb_tile_to_decompress;
	uint32_t flags;
	GRK_TILE_CACHE_STRATEGY tileCacheStrategy;
} grk_dparameters;
/**
 * Precision mode
 */
typedef enum grk_prec_mode
{
	GRK_PREC_MODE_CLIP,
	GRK_PREC_MODE_SCALE
} grk_precision_mode;
/**
 * Precision
 */
typedef struct _grk_prec
{
	uint8_t prec;
	grk_precision_mode mode;
} grk_precision;
/**
 * Decompress parameters
 */
typedef struct _grk_decompress_params
{
	/** core library parameters */
	grk_dparameters core;
	/** input file name */
	char infile[GRK_PATH_LEN];
	/** output file name */
	char outfile[GRK_PATH_LEN];
	/** input file format 0: J2K, 1: JP2*/
	GRK_SUPPORTED_FILE_FMT decod_format;
	/** output file format 0: PGX, 1: PxM, 2: BMP */
	GRK_SUPPORTED_FILE_FMT cod_format;
	/** index file name */
	char indexfilename[GRK_PATH_LEN];
	/** Decompress window left boundary */
	uint32_t DA_x0;
	/** Decompress window right boundary */
	uint32_t DA_x1;
	/** Decompress window up boundary */
	uint32_t DA_y0;
	/** Decompress window bottom boundary */
	uint32_t DA_y1;
	/** Verbose mode */
	bool m_verbose;
	/** tile number of the decompressed tile*/
	uint16_t tileIndex;
	/** Number of tiles to decompress */
	uint32_t nb_tile_to_decompress;
	grk_precision* precision;
	uint32_t nb_precision;
	/* force output colorspace to RGB */
	bool force_rgb;
	/* upsample components according to their dx/dy values */
	bool upsample;
	/* split output components to different files */
	bool split_pnm;
	/* serialize XML metadata to disk */
	bool serialize_xml;
	uint32_t compression;
	// compression "quality". Meaning of "quality" depends
	// on file format we are writing to
	uint32_t compressionLevel;
	int32_t deviceId;
	uint32_t duration; // seconds
	uint32_t kernelBuildOptions;
	uint32_t repeats;
	bool verbose;
	uint32_t numThreads;
} grk_decompress_parameters;
typedef grk_object grk_codec;
/*
 ==========================================================
 I/O stream typedef definitions
 ==========================================================
 */

/*
 * Callback function prototype for read function
 *
 */
typedef size_t (*grk_stream_read_fn)(void* buffer, size_t numBytes, void* user_data);
/*
 * Callback function prototype for write function
 */
typedef size_t (*grk_stream_write_fn)(void* buffer, size_t numBytes, void* user_data);
/*
 * Callback function prototype for (absolute) seek function.
 */
typedef bool (*grk_stream_seek_fn)(uint64_t numBytes, void* user_data);
/*
 * Callback function prototype for free user data function
 */
typedef void (*grk_stream_free_user_data_fn)(void* user_data);
/*
 * JPEG 2000 stream.
 */
typedef grk_object grk_stream;
/*
 ==============================
 image typedef definitions
 ==============================
 */

// component type
typedef enum GRK_COMPONENT_TYPE
{

	GRK_COMPONENT_TYPE_COLOUR = 0,
	GRK_COMPONENT_TYPE_OPACITY = 1,
	GRK_COMPONENT_TYPE_PREMULTIPLIED_OPACITY = 2,
	GRK_COMPONENT_TYPE_UNSPECIFIED = 65535U

} GRK_COMPONENT_TYPE;
// component association
typedef enum GRK_COMPONENT_ASSOC
{

	GRK_COMPONENT_ASSOC_WHOLE_IMAGE = 0,
	GRK_COMPONENT_ASSOC_COLOUR_1 = 1,
	GRK_COMPONENT_ASSOC_COLOUR_2 = 2,
	GRK_COMPONENT_ASSOC_COLOUR_3 = 3,
	GRK_COMPONENT_ASSOC_UNASSOCIATED = 65535U

} GRK_COMPONENT_ASSOC;
/**
 * Image component
 * */
typedef struct _grk_image_comp
{
	grk_object obj;
	/** XRsiz: horizontal separation of a sample of with component with respect to the reference
	 * grid */
	uint32_t dx;
	/** YRsiz: vertical separation of a sample of with component with respect to the reference grid
	 */
	uint32_t dy;
	/** data width */
	uint32_t w;
	/** data stride */
	uint32_t stride;
	/** data height */
	uint32_t h;
	/** x component offset compared to the whole image */
	uint32_t x0;
	/** y component offset compared to the whole image */
	uint32_t y0;
	// component registration coordinates
	uint16_t Xcrg, Ycrg;
	/** precision */
	uint8_t prec;
	bool sgnd;
	/** image component data */
	int32_t* data;
	GRK_COMPONENT_TYPE type;
	GRK_COMPONENT_ASSOC association;
} grk_image_comp;
// Image meta data: colour, IPTC and XMP
typedef struct _grk_image_meta
{
	grk_object obj;
	grk_color color;
	uint8_t* iptc_buf;
	size_t iptc_len;
	uint8_t* xmp_buf;
	size_t xmp_len;
} grk_image_meta;
typedef struct _grk_image
{
	grk_object obj;
	/** XOsiz: horizontal offset from the origin of the reference grid
	 *  to the left side of the image area */
	uint32_t x0;
	/** YOsiz: vertical offset from the origin of the reference grid
	 *  to the top side of the image area */
	uint32_t y0;
	/** Xsiz: width of the reference grid */
	uint32_t x1;
	/** Ysiz: height of the reference grid */
	uint32_t y1;
	/** number of components in the image */
	uint16_t numcomps;
	GRK_COLOR_SPACE color_space;
	bool color_applied;
	bool has_capture_resolution;
	double capture_resolution[2];
	bool has_display_resolution;
	double display_resolution[2];
	grk_image_meta* meta;
	grk_image_comp* comps;
} grk_image;
/**
 * Image component parameters
 * */
typedef struct _grk_image_comptparm
{
	/** XRsiz: horizontal separation of a sample of component
	 *  with respect to the reference grid */
	uint32_t dx;
	/** YRsiz: vertical separation of a sample of component
	 *  with respect to the reference grid */
	uint32_t dy;
	/** data width */
	uint32_t w;
	/* data stride */
	uint32_t stride;
	/** data height */
	uint32_t h;
	/** x component offset compared to the whole image */
	uint32_t x0;
	/** y component offset compared to the whole image */
	uint32_t y0;
	/** precision */
	uint8_t prec;
	/** true if data is signed */
	bool sgnd;
} grk_image_cmptparm;
////////////////////////////////////////////////
// Structs to pass data between grok and plugin
/////////////////////////////////////////////////

/**
 * Plugin pass
 */
typedef struct _grk_plugin_pass
{
	double distortionDecrease; // distortion decrease up to and including this pass
	size_t rate; // rate up to and including this pass
	size_t length; // stream length for this pass
} grk_plugin_pass;
/**
 * Plugin code block
 */
typedef struct _grk_plugin_code_block
{
	/////////////////////////
	// debug info
	uint32_t x0, y0, x1, y1;
	unsigned int* contextStream;
	///////////////////////////
	uint32_t numPix;
	uint8_t* compressedData;
	uint32_t compressedDataLength;
	uint8_t numBitPlanes;
	size_t numPasses;
	grk_plugin_pass passes[67];
	unsigned int sortedIndex;
} grk_plugin_code_block;
/**
 * Plugin precinct
 */
typedef struct _grk_plugin_precinct
{
	uint64_t numBlocks;
	grk_plugin_code_block** blocks;
} grk_plugin_precinct;