src/lib.rs

#[doc = "Palette data"]
pub type grk_palette_data = _grk_palette_data;
#[doc = "ICC profile, palette, channel definition"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct grk_color {
    pub icc_profile_buf: *mut u8,
    pub icc_profile_len: u32,
    pub channel_definition: *mut grk_channel_definition,
    pub palette: *mut grk_palette_data,
    pub has_colour_specification_box: bool,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct grk_asoc {
    pub level: u32,
    pub label: *const ::std::os::raw::c_char,
    pub xml: *mut u8,
    pub xml_len: u32,
}
#[doc = " Header info"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _grk_header_info {
    #[doc = " initial code block width, default to 64"]
    pub cblockw_init: u32,
    #[doc = " initial code block height, default to 64"]
    pub cblockh_init: u32,
    #[doc = " 1 : use the irreversible DWT 9-7, 0 : use lossless compression (default)"]
    pub irreversible: bool,
    #[doc = " multi-component transform identifier"]
    pub mct: u32,
    #[doc = " RSIZ value"]
    #[doc = "To be used to combine GRK_PROFILE_*, GRK_EXTENSION_* and (sub)levels values."]
    pub rsiz: u16,
    #[doc = " number of resolutions"]
    pub numresolutions: u32,
    pub csty: u8,
    pub cblk_sty: u8,
    #[doc = " initial precinct width"]
    pub prcw_init: [u32; 33usize],
    #[doc = " initial precinct height"]
    pub prch_init: [u32; 33usize],
    #[doc = " XTOsiz"]
    pub tx0: u32,
    #[doc = " YTOsiz"]
    pub ty0: u32,
    #[doc = " XTsiz"]
    pub t_width: u32,
    #[doc = " YTsiz"]
    pub t_height: u32,
    #[doc = " tile grid width"]
    pub t_grid_width: u32,
    #[doc = " tile grid height"]
    pub t_grid_height: u32,
    #[doc = " number of layers"]
    pub numlayers: u16,
    pub xml_data: *mut u8,
    pub xml_data_len: usize,
    pub num_comments: usize,
    pub comment: [*mut ::std::os::raw::c_char; 256usize],
    pub comment_len: [u16; 256usize],
    pub isBinaryComment: [bool; 256usize],
    pub asocs: [grk_asoc; 256usize],
    pub num_asocs: u32,
}
#[doc = " Header info"]
pub type grk_header_info = _grk_header_info;
#[doc = " Core decompress parameters"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _grk_dparameters {
    #[doc = "Set the number of highest resolution levels to be discarded."]
    #[doc = "The image resolution is effectively divided by 2 to the power of the number of discarded"]
    #[doc = "levels. The reduce factor is limited by the smallest total number of decomposition levels among"]
    #[doc = "tiles. if greater than zero, then image is decoded to original dimension divided by"]
    #[doc = "2^(cp_reduce); if equal to zero or not used, image is decompressed to full resolution"]
    pub cp_reduce: u8,
    #[doc = "Set the maximum number of quality layers to decompress."]
    #[doc = "If there are fewer quality layers than the specified number, all quality layers will be"]
    #[doc = "decompressed. if != 0, then only the first \"layer\" layers are decompressed; if == 0 or not"]
    #[doc = "used, all the quality layers are decompressed"]
    pub cp_layer: u16,
    #[doc = " input file name"]
    pub infile: [::std::os::raw::c_char; 4096usize],
    #[doc = " output file name"]
    pub outfile: [::std::os::raw::c_char; 4096usize],
    #[doc = " input file format"]
    pub decod_format: GRK_SUPPORTED_FILE_FMT,
    #[doc = " output file format"]
    pub cod_format: GRK_SUPPORTED_FILE_FMT,
    #[doc = " Decompress window left boundary"]
    pub DA_x0: u32,
    #[doc = " Decompress window right boundary"]
    pub DA_x1: u32,
    #[doc = " Decompress window up boundary"]
    pub DA_y0: u32,
    #[doc = " Decompress window bottom boundary"]
    pub DA_y1: u32,
    #[doc = " Verbose mode"]
    pub m_verbose: bool,
    #[doc = " tile number of the decompressed tile"]
    pub tileIndex: u16,
    #[doc = " Number of tiles to decompress"]
    pub nb_tile_to_decompress: u32,
    pub flags: u32,
    pub tileCacheStrategy: GRK_TILE_CACHE_STRATEGY,
}
#[doc = " Core decompress parameters"]
pub type grk_dparameters = _grk_dparameters;
pub const GRK_PREC_MODE_CLIP: grk_prec_mode = 0;
pub const GRK_PREC_MODE_SCALE: grk_prec_mode = 1;
#[doc = " Precision mode"]
pub type grk_prec_mode = ::std::os::raw::c_uint;
#[doc = " Precision mode"]
pub use self::grk_prec_mode as grk_precision_mode;
#[doc = " Precision"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _grk_prec {
    pub prec: u8,
    pub mode: grk_precision_mode,
}
#[doc = " Precision"]
pub type grk_precision = _grk_prec;
#[doc = " Decompress parameters"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _grk_decompress_params {
    #[doc = " core library parameters"]
    pub core: grk_dparameters,
    #[doc = " input file name"]
    pub infile: [::std::os::raw::c_char; 4096usize],
    #[doc = " output file name"]
    pub outfile: [::std::os::raw::c_char; 4096usize],
    #[doc = " input file format 0: J2K, 1: JP2"]
    pub decod_format: GRK_SUPPORTED_FILE_FMT,
    #[doc = " output file format 0: PGX, 1: PxM, 2: BMP"]
    pub cod_format: GRK_SUPPORTED_FILE_FMT,
    #[doc = " index file name"]
    pub indexfilename: [::std::os::raw::c_char; 4096usize],
    #[doc = " Decompress window left boundary"]
    pub DA_x0: u32,
    #[doc = " Decompress window right boundary"]
    pub DA_x1: u32,
    #[doc = " Decompress window up boundary"]
    pub DA_y0: u32,
    #[doc = " Decompress window bottom boundary"]
    pub DA_y1: u32,
    #[doc = " Verbose mode"]
    pub m_verbose: bool,
    #[doc = " tile number of the decompressed tile"]
    pub tileIndex: u16,
    #[doc = " Number of tiles to decompress"]
    pub nb_tile_to_decompress: u32,
    pub precision: *mut grk_precision,
    pub nb_precision: u32,
    pub force_rgb: bool,
    pub upsample: bool,
    pub split_pnm: bool,
    pub serialize_xml: bool,
    pub compression: u32,
    pub compressionLevel: u32,
    pub deviceId: i32,
    pub duration: u32,
    pub kernelBuildOptions: u32,
    pub repeats: u32,
    pub verbose: bool,
    pub numThreads: u32,
}
#[doc = " Decompress parameters"]
pub type grk_decompress_parameters = _grk_decompress_params;
pub type grk_codec = grk_object;
pub type grk_stream_read_fn = ::std::option::Option<
    unsafe extern "C" fn(
        buffer: *mut ::std::os::raw::c_void,
        numBytes: usize,
        user_data: *mut ::std::os::raw::c_void,
    ) -> usize,
>;
pub type grk_stream_write_fn = ::std::option::Option<
    unsafe extern "C" fn(
        buffer: *mut ::std::os::raw::c_void,
        numBytes: usize,
        user_data: *mut ::std::os::raw::c_void,
    ) -> usize,
>;
pub type grk_stream_seek_fn = ::std::option::Option<
    unsafe extern "C" fn(numBytes: u64, user_data: *mut ::std::os::raw::c_void) -> bool,
>;
pub type grk_stream_free_user_data_fn =
    ::std::option::Option<unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void)>;
pub type grk_stream = grk_object;
pub const GRK_COMPONENT_TYPE_COLOUR: GRK_COMPONENT_TYPE = 0;
pub const GRK_COMPONENT_TYPE_OPACITY: GRK_COMPONENT_TYPE = 1;
pub const GRK_COMPONENT_TYPE_PREMULTIPLIED_OPACITY: GRK_COMPONENT_TYPE = 2;
pub const GRK_COMPONENT_TYPE_UNSPECIFIED: GRK_COMPONENT_TYPE = 65535;
pub type GRK_COMPONENT_TYPE = ::std::os::raw::c_uint;
pub const GRK_COMPONENT_ASSOC_WHOLE_IMAGE: GRK_COMPONENT_ASSOC = 0;
pub const GRK_COMPONENT_ASSOC_COLOUR_1: GRK_COMPONENT_ASSOC = 1;
pub const GRK_COMPONENT_ASSOC_COLOUR_2: GRK_COMPONENT_ASSOC = 2;
pub const GRK_COMPONENT_ASSOC_COLOUR_3: GRK_COMPONENT_ASSOC = 3;
pub const GRK_COMPONENT_ASSOC_UNASSOCIATED: GRK_COMPONENT_ASSOC = 65535;
pub type GRK_COMPONENT_ASSOC = ::std::os::raw::c_uint;
#[doc = " Image component"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _grk_image_comp {
    pub obj: grk_object,
    #[doc = " XRsiz: horizontal separation of a sample of with component with respect to the reference"]
    #[doc = " grid"]
    pub dx: u32,
    #[doc = " YRsiz: vertical separation of a sample of with component with respect to the reference grid"]
    pub dy: u32,
    #[doc = " data width"]
    pub w: u32,
    #[doc = " data stride"]
    pub stride: u32,
    #[doc = " data height"]
    pub h: u32,
    #[doc = " x component offset compared to the whole image"]
    pub x0: u32,
    #[doc = " y component offset compared to the whole image"]
    pub y0: u32,
    pub Xcrg: u16,
    pub Ycrg: u16,
    #[doc = " precision"]
    pub prec: u8,
    pub sgnd: bool,
    #[doc = " image component data"]
    pub data: *mut i32,
    pub type_: GRK_COMPONENT_TYPE,
    pub association: GRK_COMPONENT_ASSOC,
}
#[doc = " Image component"]
pub type grk_image_comp = _grk_image_comp;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _grk_image_meta {
    pub obj: grk_object,
    pub color: grk_color,
    pub iptc_buf: *mut u8,
    pub iptc_len: usize,
    pub xmp_buf: *mut u8,
    pub xmp_len: usize,
}
pub type grk_image_meta = _grk_image_meta;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _grk_image {
    pub obj: grk_object,
    #[doc = " XOsiz: horizontal offset from the origin of the reference grid"]
    #[doc = "  to the left side of the image area"]
    pub x0: u32,
    #[doc = " YOsiz: vertical offset from the origin of the reference grid"]
    #[doc = "  to the top side of the image area"]
    pub y0: u32,
    #[doc = " Xsiz: width of the reference grid"]
    pub x1: u32,
    #[doc = " Ysiz: height of the reference grid"]
    pub y1: u32,
    #[doc = " number of components in the image"]
    pub numcomps: u16,
    pub color_space: GRK_COLOR_SPACE,
    pub color_applied: bool,
    pub has_capture_resolution: bool,
    pub capture_resolution: [f64; 2usize],
    pub has_display_resolution: bool,
    pub display_resolution: [f64; 2usize],
    pub meta: *mut grk_image_meta,
    pub comps: *mut grk_image_comp,
}
pub type grk_image = _grk_image;
#[doc = " Image component parameters"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _grk_image_comptparm {
    #[doc = " XRsiz: horizontal separation of a sample of component"]
    #[doc = "  with respect to the reference grid"]
    pub dx: u32,
    #[doc = " YRsiz: vertical separation of a sample of component"]
    #[doc = "  with respect to the reference grid"]
    pub dy: u32,
    #[doc = " data width"]
    pub w: u32,
    pub stride: u32,
    #[doc = " data height"]
    pub h: u32,
    #[doc = " x component offset compared to the whole image"]
    pub x0: u32,
    #[doc = " y component offset compared to the whole image"]
    pub y0: u32,
    #[doc = " precision"]
    pub prec: u8,
    #[doc = " true if data is signed"]
    pub sgnd: bool,
}
#[doc = " Image component parameters"]
pub type grk_image_cmptparm = _grk_image_comptparm;
#[doc = " Plugin pass"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _grk_plugin_pass {
    pub distortionDecrease: f64,
    pub rate: usize,
    pub length: usize,
}
#[doc = " Plugin pass"]
pub type grk_plugin_pass = _grk_plugin_pass;
#[doc = " Plugin code block"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _grk_plugin_code_block {
    #[doc = ""]
    pub x0: u32,
    #[doc = ""]
    pub y0: u32,
    #[doc = ""]
    pub x1: u32,
    #[doc = ""]
    pub y1: u32,
    pub contextStream: *mut ::std::os::raw::c_uint,
    #[doc = ""]
    pub numPix: u32,
    pub compressedData: *mut u8,
    pub compressedDataLength: u32,
    pub numBitPlanes: u8,
    pub numPasses: usize,
    pub passes: [grk_plugin_pass; 67usize],
    pub sortedIndex: ::std::os::raw::c_uint,
}
#[doc = " Plugin code block"]
pub type grk_plugin_code_block = _grk_plugin_code_block;
#[doc = " Plugin precinct"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _grk_plugin_precinct {
    pub numBlocks: u64,
    pub blocks: *mut *mut grk_plugin_code_block,
}
